Fix: Address layout issues
Address layout issues to improve the user experience.

--- a/src/index.css
+++ b/src/index.css
@@ -135,7 +135,7 @@
   }
   
   .container-padding {
-    @apply px-4 sm:px-6 lg:px-12 xl:px-16;
+    @apply px-2 sm:px-4 lg:px-6 xl:px-8;
   }
   
   .btn-primary {
